--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,11 +3,11 @@ FROM node:22-alpine
 WORKDIR /app
 
 COPY package*.json ./
-
-RUN npm install
+# bitno za runnanje sa mobx
+RUN npm install --legacy-peer-deps 
 
 COPY . .
 
-EXPOSE 5173
+EXPOSE 5174
 
 CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
