--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
     "@phosphor-icons/react": "^2.1.10",
     "embla-carousel-react": "^8.6.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.4",
+    "mobx": "^6.9.0",
+    "mobx-react-lite": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
